terraform/network.tf
resource "aws_subnet" "public_1" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.public_subnet_1_cidr
    availability_zone = "${var.aws_region}a"
    map_public_ip_on_launch = true

    tags = {
        Name = "${var.cluster_name}-public-subnet-1"
        "kubernetes.io/role/elb" = "1"
    }
  
}

resource "aws_subnet" "public_2" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.public_subnet_2_cidr
    availability_zone = "${var.aws_region}b"
    map_public_ip_on_launch = true
    tags = {
        Name = "${var.cluster_name}-public-subnet-2"
        "kubernetes.io/role/elb" = "1"
    }
  
}

resource "aws_subnet" "private_1" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.private_subnet_1_cidr
    availability_zone = "${var.aws_region}a"

    tags = {
        Name = "${var.cluster_name}-private-subnet-1"
        "kubernetes.io/role/internal-elb" = "1"
    }
  
}

resource "aws_subnet" "private_2" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = var.private_subnet_2_cidr
    availability_zone = "${var.aws_region}b"

    tags = {
        Name = "${var.cluster_name}-private-subnet-2"
        "kubernetes.io/role/internal-elb" = "1"
    }
  
}

resource "aws_eip" "nat" {

  domain = "vpc"

  tags = {
    Name = "${var.cluster_name}-nat-eip"
  }

}

resource "aws_nat_gateway" "main" {

  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public_1.id

  tags = {
    Name = "${var.cluster_name}-nat"
  }

}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id

  }

  tags = {
    Name = "${var.cluster_name}-public-rt"
  }

}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.main.id

  }

  tags = {
    Name = "${var.cluster_name}-private-rt"
  }

}

resource "aws_route_table_association" "public_1" {

  subnet_id = aws_subnet.public_1.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "public_2" {

  subnet_id = aws_subnet.public_2.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "private_1" {

  subnet_id = aws_subnet.private_1.id

  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "private_2" {

  subnet_id = aws_subnet.private_2.id

  route_table_id = aws_route_table.private.id

}
